--- a/src/main/webapp/ShowAdvisor.html
+++ b/src/main/webapp/ShowAdvisor.html
@@ -25,7 +25,7 @@
       </button>
     </p>
     
-    <div style="min-height: 120px;"">
+    <div style="min-height: 120px;">
       <div class="collapse" id="collapseWidthExample">
         <div class="card card-body" style="width: 480px;">
 
